[package]
name = "aptos-comparison-testing"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "A tool to perform comparison testing on the compiler"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"
default-run = "aptos-comparison-testing"

[dependencies]
anyhow = { workspace = true }
aptos = { workspace = true }
aptos-crypto = { workspace = true }
aptos-framework = { workspace = true }
aptos-gas-meter = { workspace = true }
aptos-gas-profiling = { workspace = true }
aptos-gas-schedule = { workspace = true }
aptos-language-e2e-tests = { workspace = true }
aptos-logger = { workspace = true }
aptos-memory-usage-tracker = { workspace = true }
aptos-resource-viewer = { workspace = true }
aptos-rest-client = { workspace = true }
aptos-table-natives = { workspace = true }
aptos-types = { workspace = true }
aptos-validator-interface = { workspace = true }
aptos-vm = { workspace = true }
aptos-vm-logging = { workspace = true }
aptos-vm-types = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
move-binary-format = { workspace = true }
move-cli = { workspace = true }
move-compiler = { workspace = true }
move-core-types = { workspace = true }
move-package = { workspace = true }
move-resource-viewer = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-vm-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

