[package]
name = "aptos-evm"
description = "Aptos EVM"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-crypto = { workspace = true }
aptos-crypto-derive = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-move-stdlib = { workspace = true }
aptos-native-interface = { workspace = true }
aptos-state-view = { workspace = true }
aptos-table-natives = { workspace = true }
aptos-types = { workspace = true }
aptos-utils = { workspace = true }
aptos-vm-types = { workspace = true }
bcs = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false }
evm-core = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false, features = ["std"] }
evm-gasometer = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false, features = ["std", "tracing"] }
evm-runtime = { git = "https://github.com/aurora-is-near/sputnikvm.git", tag = "v0.38.0-aurora", default-features = false, features = ["std", "tracing"] }
fail = { workspace = true }
futures = { workspace = true }
hex = "0.4"
move-binary-format = { workspace = true }
move-bytecode-utils = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-unit-test = { workspace = true, optional = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-vm-types = { workspace = true }
ouroboros = { workspace = true }
primitive-types = { version = "0.12.1", default-features = false, features = ["rlp", "serde_no_std"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
aptos-language-e2e-tests = { workspace = true }
aptos-types = { workspace = true }
proptest = { workspace = true }

[features]
default = []
